# showtime

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  afternoon.doap  meson.build  meson.options  page.kramo.Afternoon.Devel.json  page.kramo.Afternoon.json  pyproject.toml  pyrightconfig.json  showtime.doap
afternoon/: afternoon.gresource.xml.in  afternoon.in  configure_logging.py  drag_overlay.py  main.py  meson.build  mpris.py  shared.py.in  utils.py  window.py
afternoon/gtk/: help-overlay.blp  style.css  window.blp
build-aux/flatpak/: org.gnome.Showtime.Devel.json
build-aux/macos/: showtime.spec
data/: meson.build  org.gnome.Afternoon.gschema.xml.in  org.gnome.Afternoon.metainfo.xml.in  org.gnome.Showtime.desktop.in  org.gnome.Showtime.gschema.xml.in  org.gnome.Showtime.metainfo.xml.in  org.gnome.Showtime.service.in  page.kramo.Afternoon.desktop.in  page.kramo.Afternoon.gschema.xml  page.kramo.Afternoon.gschema.xml.in  page.kramo.Afternoon.metainfo.xml.in
data/icons/: meson.build
flatpak/: org.gnome.Afternoon.Devel.json  org.gnome.Showtime.Devel.json  page.kramo.Afternoon.Devel.json
po/: HU.po  LINGUAS  POTFILES  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lo.po  lt.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  (+14 more)
showtime/: __init__.py  __init__.py.in  _showtime.pyi  application.py  application_delegate.py  configure_logging.py  drag_overlay.py  main.py  meson.build  messenger.py  mpris.py  play.py  shared.py.in  shared.pyi  showtime.c  showtime.gresource.xml.in  showtime.in  utils.py  window.py
showtime/gtk/: help-overlay.blp  options.blp  style-hc.css  style.css  window.blp
showtime/logging/: color_log_formatter.py  session_file_handler.py  setup.py
showtime/widgets/: options.py  sound_options.py  window.py
src/: afternoon.gresource.xml  main.py  meson.build  window.blp  window.py
src/gtk/: help-overlay.blp
